[Frontend] Fix user list background in dark mode

--- a/src/static/room-dark.css
+++ b/src/static/room-dark.css
@@ -106,6 +106,10 @@
   color: #c0c0c0;
 }
 
+/* Need to be more specific than .dark .sidebar-middle > *. */
+.dark .sidebar-middle > .user-list {
+  background: none;
+}
 .dark .user-list .nick-box.selected .nick {
   border-color: #e0e0e0;
 }
